--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: landing-page
 			<div class="4u">
 				<section>
 					<header>
-						<h3><a href="/education"><span class="icon fa-graduation-cap"></span> Advanced Education</a></h3>
+						<h3><a href="/education"><span class="icon fa-graduation-cap"></span> Education & Training</a></h3>
 					</header>
 					<p class="hyphenate">
 						We are strongly involved in bringing 
