--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: landing-page
 			<div class="4u">
 				<section>
 					<header>
-						<h3><span class="icon fa-search"></span> <a href="/research">Cross-cutting Research</a></h3>
+						<h3><span class="fa fa-search fa-sm"></span> <a href="/research-areas">Cross-cutting Research</a></h3>
 					</header>
 					<p class="hyphenate">Achieving challenging research visions demands expertise in many research fields. Our group fosters collaborations among researchers with varied backgrounds. A positive feedback loop where practical problems inspire theoretical investigation and where formal solutions are applied to solve real-world challenges.</p>
 				</section>
@@ -19,7 +19,7 @@ layout: landing-page
 			<div class="4u">
 				<section>
 					<header>
-						<h3><a href="/education"><span class="icon fa-graduation-cap"></span> Education & Training</a></h3>
+						<h3><a href="/education"><span class="fa fa-graduation-cap fa-sm"></span> Education & Training</a></h3>
 					</header>
 					<p class="hyphenate">
 						We are strongly involved in bringing 
@@ -35,7 +35,7 @@ layout: landing-page
 			<div class="4u">
 				<section>
 					<header>
-						<h3><a href="/industry"><span class="icon fa-briefcase"></span> Industrial Collaboration</a></h3>
+						<h3><a href="/industry"><span class="fa fa-briefcase fa-sm"></span> Industrial Collaboration</a></h3>
 					</header>
 					<p class="hyphenate">We seek strong synergies with industry. Industrial <a
 						href="/industry.html">collaborations</a> drive the
@@ -51,7 +51,7 @@ layout: landing-page
 	</section>
 
 	<!-- Three -->
-	<section class="wrapper style3 container special">
+	<section class="wrapper style3 card container special">
 
 		<header class="major">
 			<h2>Latest Events and News</h2>
@@ -66,8 +66,8 @@ layout: landing-page
 					<header>
 						<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
 					</header>
-					<p><small>{{ post.excerpt }}</small>
-					<a href="{{ post.url }}"><button class="btn btn-sm btn-primary">Continue reading</button></a></p>
+					<div class="card"><small>{{ post.excerpt }}</small>
+					<a class="nodec" href="{{ post.url }}"><button class="float-right btn btn-sm btn-primary">Continue reading</button></a></div>
 				</section>
 			</div>
 			{% endfor %}
