--- a/utils/lineariseReferences.html
+++ b/utils/lineariseReferences.html
@@ -11,9 +11,11 @@
     <div class="mt-5 row">
       <div class="col-sm-6">
         <textarea style="height:20em;" class="form-control" id="source"></textarea>
+        Source - paste the bibitem in the area above
       </div>
       <div class="col-sm-6">
         <textarea style="height:20em;" class="form-control" id="destination"></textarea>
+        Destination - it's automatically copied in the clipboard :)
       </div>
       <div class="mt-5 col-sm-12">
       </div>
