--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@ layout: landing-page
 					<header>
 						<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
 					</header>
-					<div class="card"><small>{{ post.excerpt }}</small>
+					<div class="card text-justify hyphenate"><div class="-1u 10u"><div class="mt-4"></div><small>{{ post.excerpt }}</small></div>
 					<a class="nodec" href="{{ post.url }}"><button class="float-right btn btn-sm btn-primary">Continue reading</button></a></div>
+					<div class="mt-4"></div>
 				</section>
 			</div>
 			{% endfor %}
