--- a/index.html
+++ b/index.html
@@ -54,14 +54,17 @@ layout: landing-page
 	<section class="wrapper style3 card container special">
 
 		<header class="major">
-			<h2>Latest Events and News</h2>
+			<h2>Latest Events</h2>
 		</header>
 
+		{% assign latest_posts = site.posts | slice: 0, 4%}
+	
 		<div class="row">
-			{% assign latest_posts = site.posts | slice: 0, 4%}
-
-			{% for post in latest_posts %}
-			<div class="6u">
+		<div class="6u">
+		{% for post in latest_posts %}
+		{% assign index = forloop.index | modulo: 2 %}
+		{% if index == 1 %}
+			<div class="12u">
 				<section>
 					<header>
 						<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
@@ -71,8 +74,26 @@ layout: landing-page
 					<div class="mt-4"></div>
 				</section>
 			</div>
-			{% endfor %}
-
+		{% endif %}
+		{% endfor %}
+		</div>
+		<div class="6u">
+		{% for post in latest_posts %}
+		{% assign index = forloop.index | modulo: 2 %}
+		{% if index == 0 %}
+			<div class="12u">
+				<section>
+					<header>
+						<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
+					</header>
+					<div class="card text-justify hyphenate"><div class="-1u 10u"><div class="mt-4"></div><small>{{ post.excerpt }}</small></div>
+					<a class="nodec" href="{{ post.url }}"><button class="float-right btn btn-sm btn-primary">Continue reading</button></a></div>
+					<div class="mt-4"></div>
+				</section>
+			</div>
+		{% endif %}
+		{% endfor %}
+		</div>
 		</div>
 
 		<footer class="major">
