switched to macro in templates

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@ layout: landing-page
 	<section class="wrapper style1 container special intro-box">
 		<div class="row">
 
-			<div class="4u">
-				<section>
-					<header>
-						<h3><span class="fa fa-search fa-sm"></span> <a href="/research-areas">Cross-cutting Research</a></h3>
-					</header>
-					<p class="hyphenate">Achieving challenging research visions demands expertise in many research fields. Our group fosters collaborations among researchers with varied backgrounds. A positive feedback loop where practical problems inspire theoretical investigation and where formal solutions are applied to solve real-world challenges.</p>
-				</section>
-			</div>
+			<div class="4u"> <section> <header> <h3><span class="fa fa-search
+				fa-sm"></span> <a href="/research-areas">Cross-cutting
+				Research</a></h3> </header> <p class="hyphenate">Achieving challenging
+				research visions demands expertise in many research fields. Our group
+				fosters collaborations among researchers with varied backgrounds. A
+				positive feedback loop where practical problems inspire theoretical
+				investigation and where formal solutions are applied to solve
+				real-world challenges.</p> </section> </div>
 
 			<div class="4u">
 				<section>
