draft content for research areas > microservices

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: landing-page
 	<section class="wrapper style4 container special intro-box">
 		<div class="row">
 
-			<div class="col-4"> <section> <header> <h3><span class="fa fa-search
+			<div class="col-12 col-lg-4"> <section> <header> <h3><span class="fa fa-search
 				fa-sm"></span> <a href="/research-areas">Cross-cutting
 				Research</a></h3> </header> <p class="hyphenate">Achieving challenging
 				research visions demands expertise in many research fields. Our group
@@ -16,7 +16,7 @@ layout: landing-page
 				investigation and where formal solutions are applied to solve
 				real-world challenges.</p> </section> </div>
 
-			<div class="col-4">
+			<div class="col-12 col-lg-4">
 				<section>
 					<header>
 						<h3><a href="/education"><span class="fa fa-graduation-cap fa-sm"></span> Education & Training</a></h3>
@@ -32,7 +32,7 @@ layout: landing-page
 				</section>
 			</div>
 
-			<div class="col-4">
+			<div class="col-12 col-lg-4">
 				<section>
 					<header>
 						<h3><a href="/industry"><span class="fa fa-briefcase fa-sm"></span> Industrial Collaboration</a></h3>
