--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@ layout: landing-page
 <!-- Main -->
 <article id="main">
 
-	<section class="wrapper style4 container special intro-box">
+	<section class="wrapper style4 container special intro-box rounded">
 		<div class="row">
 
-			<div class="col-12 col-lg-4"> <section> <header> <h3><span class="fa fa-search
-				fa-sm"></span> <a href="/research-areas">Cross-cutting
+			<div class="col-12 col-lg-4"> <section> <header> <h3><span class="fa
+				fa-search fa-sm"></span> <a href="/research-areas">Cross-cutting
 				Research</a></h3> </header> <p class="hyphenate">Achieving challenging
-				research visions demands expertise in many research fields. Our group
-				fosters collaborations among researchers with varied backgrounds. A
-				positive feedback loop where practical problems inspire theoretical
-				investigation and where formal solutions are applied to solve
-				real-world challenges.</p> </section> </div>
+				<a href="/research_areas">research visions</a> demands expertise in
+				many fields. Our group fosters collaborations among researchers from
+				varied backgrounds. A positive feedback loop where practical problems
+				inspire theoretical investigation and where formal solutions are
+				applied to solve real-world challenges.</p> </section> </div>
 
 			<div class="col-12 col-lg-4">
 				<section>
@@ -106,7 +106,7 @@ layout: landing-page
 		</div>
 		</div>
 
-		<footer class="major pb-4">
+		<footer class="major pb-5">
 			<ul class="buttons">
 				<li><a href="/events.html" class="button">Events Page</a></li>
 			</ul>
