--- a/index.html
+++ b/index.html
@@ -4,51 +4,43 @@ layout: landing-page
 <!-- Main -->
 <article id="main">
 
-	<section class="wrapper style4 container special intro-box rounded">
-		<div class="row">
+<div class="container ">
+	<div class="row">
+		<div class="card mb-5 col-md-6 offset-md-3 col-xs-12">
+			<section class="card-body">
 
-			<div class="col-12 col-lg-4"> <section> <header> <h3><span class="fa
-				fa-search fa-sm"></span> <a href="/research-areas">Cross-cutting
-				Research</a></h3> </header> <p class="hyphenate">Achieving challenging
-				<a href="/research_areas">research visions</a> demands expertise in
-				many fields. Our group fosters collaborations among researchers from
-				varied backgrounds. A positive feedback loop where practical problems
-				inspire theoretical investigation and where formal solutions are
-				applied to solve real-world challenges.</p> </section> </div>
+				<div class="text-justify hyphenate"> <div class="card-title"><h2
+				class="text-center">{{ site.group_short }}, in a few
+				sentences.</h2></div>
+				<div class="small">
+				<p>We are a group of <a target="_blank"
+				href="/people.html">researchers</a> working at <a target="_blank"
+				href="https://www.sdu.dk">SDU</a>.</p>
 
-			<div class="col-12 col-lg-4">
-				<section>
-					<header>
-						<h3><a href="/education"><span class="fa fa-graduation-cap fa-sm"></span> Education & Training</a></h3>
-					</header>
-					<p class="hyphenate">
-						We are strongly involved in bringing 
-						bleeding-edge research topics to <a href="/education.html">students</a> and 
-						<a href="/industry">industrial teams</a>. 
-						BSc graduates can apply to the MSc package 
-						in <a href="#">Digital Organisations: Models and Systems</a> at 
-						<a href="https://www.sdu.dk">SDU</a>.
-					</p>
-				</section>
-			</div>
+				<p>We believe in the importance of tackling practical problems through
+				theoretical investigation, so that formal models guide the
+				implementation of <a target="_blank" href="/software.html">software
+				tools</a> useful to solve real-world issues.</p>
 
-			<div class="col-12 col-lg-4">
-				<section>
-					<header>
-						<h3><a href="/industry"><span class="fa fa-briefcase fa-sm"></span> Industrial Collaboration</a></h3>
-					</header>
-					<p class="hyphenate">We seek strong synergies with industry. Industrial <a
-						href="/industry.html">collaborations</a> drive the
-						investigation of new <a
-						href="/research-areas.html">theories</a> and the creation of
-						new <a href="/software.html">software tools</a> to increase
-					production efficiency.</p>
+				<p>Conscious that developing breakthrough solutions to challenging <a
+				target="_blank" href="/research-areas.html">research questions</a>
+				requires expertise in many fields, we value the diverse <a
+				target="_blank" href="/publications.html">scientific backgrounds</a> of
+				our members.</p>
 
-				</section>
-			</div>
+				<p>We also conduct and collaborate in many <a target="_blank"
+				href="/grants.html">international projects</a> and we organise and
+				participate into different <a target="_blank"
+				href="/communities.html">industrial and academic communities</a>.</p>
+				
+				</div>
 
+				</div>
+				
+			</section>
 		</div>
-	</section>
+	</div>
+</div>
 
 	<!-- Three -->
 	<section class="card container special">
