--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: landing-page
----		
+---
 <!-- Main -->
 <article id="main">
 
@@ -9,34 +9,22 @@ layout: landing-page
 		<div class="card mb-5 col-md-6 offset-md-3 col-xs-12">
 			<section class="card-body">
 
-				<div class="text-justify hyphenate"> <div class="card-title"><h2
+				<div class="text-justify hyphenate">
+					 <!-- <div class="card-title"><h2
 				class="text-center">{{ site.group_short }}, in a few
-				sentences.</h2></div>
+				sentences.</h2></div> -->
 				<div class="small">
-				<p>We are a group of <a target="_blank"
-				href="/people.html">researchers</a> working at <a target="_blank"
-				href="https://www.sdu.dk">SDU</a>.</p>
-
-				<p>We believe in the importance of tackling practical problems through
-				theoretical investigation, so that formal models guide the
-				implementation of <a target="_blank" href="/software.html">software
-				tools</a> useful to solve real-world issues.</p>
-
-				<p>Conscious that developing breakthrough solutions to challenging <a
-				target="_blank" href="/research-areas.html">research questions</a>
-				requires expertise in many fields, we value the diverse <a
-				target="_blank" href="/publications.html">scientific backgrounds</a> of
-				our members.</p>
-
-				<p>We also conduct and collaborate in many <a target="_blank"
-				href="/grants.html">international projects</a> and we organise and
-				participate into different <a target="_blank"
-				href="/communities.html">industrial and academic communities</a>.</p>
-				
-				</div>
+				<p> In the {{ site.group_short }} at <a
+				href="https://www.sdu.dk">SDU</a>, we are interested in the challenges
+				brought by modern digital systems, such as big data systems, the
+				Internet of Things, and data clouds: software, data, and systems are
+				getting increasingly larger and complex, pushing beyond the limits of
+				developing and analysing them manually. In our group, we develop theory
+				and tools that automate crucial steps of the development and analysis
+				processes, enhancing their efficiency and reliability.</p></div>
 
 				</div>
-				
+
 			</section>
 		</div>
 	</div>
@@ -50,7 +38,7 @@ layout: landing-page
 		</header>
 
 		{% assign latest_posts = site.posts | slice: 0, 4%}
-	
+
 		<div class="row">
 		<div class="col-12 col-lg-6">
 		{% for post in latest_posts %}
