--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@ layout: landing-page
 				class="text-center">{{ site.group_short }}, in a few
 				sentences.</h2></div> -->
 				<div class="small">
-				<p> In the {{ site.group_short }} at <a
+				<p> In the {{ site.group_short }} group at <a
 				href="https://www.sdu.dk">SDU</a>, we are interested in the challenges
 				brought by modern digital systems, such as big data systems, the
 				Internet of Things, and data clouds: software, data, and systems are
 				getting increasingly larger and complex, pushing beyond the limits of
 				developing and analysing them manually. In our group, we develop theory
 				and tools that automate crucial steps of the development and analysis
-				processes, enhancing their efficiency and reliability.</p></div>
+				processes, enhancing their efficiency and reliability.</p>
+				</div>
 
 				</div>
 
