draft SAC and some fixes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: landing-page
 					<div style="margin-top: -.8em;" class="border border-top-0 text-justify hyphenate">
 				 		<div class="col-12"><div class="pt-4"></div>{{ post.excerpt }}</div>
 						<a class="nodec float-right" href="{{ post.url }}">
-							<button class="rounded-0 btn btn-primary">Continue reading <span class="fa fa-arrow-circle-right"></span></button>
+							<button class="rounded-0 btn btn-light">Continue reading <span class="fa fa-arrow-circle-right"></span></button>
 						</a>
 						<div class="clearfix"></div>
 					</div>
@@ -73,7 +73,7 @@ layout: landing-page
 					<div style="margin-top: -1.2em;" class="border border-top-0 text-justify hyphenate">
 				 		<div class="col-12"><div class="pt-4"></div>{{ post.excerpt }}</div>
 						<a class="nodec float-right" href="{{ post.url }}">
-							<button class="rounded-0 btn btn-primary">Continue reading <span class="fa fa-arrow-circle-right"></span></button>
+							<button class="rounded-0 btn btn-light">Continue reading <span class="fa fa-arrow-circle-right"></span></button>
 						</a>
 						<div class="clearfix"></div>
 					</div>
