updated layout for mobile devices + post on MADE18

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ layout: landing-page
 		</div>
 
 		<footer class="major pb-5">
-			<ul class="buttons">
+			<ul class="buttons pl-0">
 				<li><a href="/events.html" class="button">Events Page</a></li>
 			</ul>
 		</footer>
