--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: landing-page
 
 <div class="container ">
 	<div class="row">
-		<div class="card pt-3 mb-5 offset-lg-2 col-lg-8 col-12">
-			<section class="card-body">
+		<div class="bg-alert-success pt-2 mb-5 offset-lg-2 col-lg-8 col-12">
+			<section class="card-body pb-0">
 
 				<div class="text-justify hyphenate">
 					 <!-- <div class="card-title"><h2
@@ -30,7 +30,7 @@ layout: landing-page
 </div>
 
 	<!-- Three -->
-	<section class="card container special">
+	<section class="card container special mb-5">
 
 		<header>
 			<h2>Latest Events</h2>
@@ -45,7 +45,7 @@ layout: landing-page
 		{% if index == 1 %}
 				<section class="card border-0">
 					<div class="card-body">
-					<div class="card-title alert-info rounded-top">
+					<div class="card-title pl-1 pr-1 alert-info rounded-top">
 						<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
 					</div>
 					<div style="margin-top: -.8em;" class="border border-top-0 text-justify hyphenate">
@@ -67,7 +67,7 @@ layout: landing-page
 		{% if index == 0 %}
 				<section class="card border-0">
 					<div class="card-body">
-					<div class="card-title alert-info rounded-top">
+					<div class="card-title pl-1 pr-1 alert-info rounded-top">
 						<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
 					</div>
 					<div style="margin-top: -1.2em;" class="border border-top-0 text-justify hyphenate">
