toggle static and fixed header

--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,9 @@ layout: landing-page
 <!-- Main -->
 <div class="container">
 	<div class="row">
-		<div class="bg-alert-success pt-2  mt-5 mb-3 offset-lg-2 col-lg-8 col-12">
+		<div class="bg-alert-success pt-2 mb-3 offset-lg-2 col-lg-8 col-12">
 			<section class="card-body pb-0">
-				<div class="mt-5 mb-5 text-justify hyphenate"> 
+				<div class="text-justify hyphenate"> 
 				In the {{ site.group_name }} ({{ site.group_short }}) group at <a
 				href="https://www.sdu.dk">SDU</a>, we are interested in the challenges
 				brought by modern digital systems, such as big data systems, the
