--- a/web/index.html
+++ b/web/index.html
@@ -6,16 +6,20 @@ layout: landing-page
 	<div class="row">
 		<div class="bg-alert-success pt-2 mb-3 offset-lg-2 col-lg-8 col-12">
 			<section class="card-body pb-0">
-				<div class="text-justify hyphenate"> 
-				Our mission is to push the boundaries of what modern digital systems can do, by breaking new ground in and establishing
+				<div class="text-justify hyphenate">
+				<p>Welcome to the website of the Section of {{ site.group_name }} at the <a href="https://imada.sdu.dk/" target="_new">Department of Mathematics and Computer Science</a>, <a href="https://www.sdu.dk/">University of Southern Denmark</a>.</p>
+				<p>Our mission is to push the boundaries of what modern digital systems can do, by breaking new ground in and establishing
 				synergies between the fields of artificial intelligence, cybersecurity, and programming technology. Computer systems,
 				like data clouds and the Internet of Things, are getting increasingly larger and more complex, both in terms of software
 				and hardware. We have crossed the limits of checking manually that computer programs do what they are supposed to do,
 				and that they do so efficiently and securely.
+				</p>
 				
+				<p>
 				In our group, we develop theory and tools that support developers in the modelling, analysis, coordination, and
 				programming of systems. We investigate methods that automate crucial steps of the development and analysis processes,
 				enhancing their efficiency and reliability, and we build solutions and libraries that increase the security of systems.
+				</p>
 				</div>
 			</section>
 		</div>
