--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@ layout: landing-page
 				
 				<p>
 				In our group, we develop theory and tools that support developers in the modelling, analysis, coordination, and
-				programming of systems. We investigate methods that automate crucial steps of the development and analysis processes,
+				programming of systems. We investigate methods that automate and optimise crucial steps of the development and deployment processes,
 				enhancing their efficiency and reliability, and we build solutions and libraries that increase the security of systems.
 				</p>
 				</div>
