Add new introduction paragraph

--- a/web/index.html
+++ b/web/index.html
@@ -14,12 +14,13 @@ layout: landing-page
 				and hardware. We have crossed the limits of checking manually that computer programs do what they are supposed to do,
 				and that they do so efficiently and securely.
 				</p>
-				
 				<p>
 				In our group, we develop theory and tools that support developers in the modelling, analysis, coordination, and
 				programming of systems. We investigate methods that automate and optimise crucial steps of the development and deployment processes,
 				enhancing their efficiency and reliability, and we build solutions and libraries that increase the security of systems.
 				</p>
+                <p>We are a diverse and international group, working together in the 3rd largest city in Denmark, Odense. We value our
+                collaborations with each other and with many other academic, public, and industrial organisations and interest groups.</p>
 				</div>
 			</section>
 		</div>
